--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   geolocator: ^3.0.1
   http: ^0.12.0+2
   flutter_spinkit: ^3.1.0
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
